# llvm-qt-obfuscator

./: Dockerfile  LICENSE  README.md
examples/app_manager/: app_manager.pro  appmanager.cpp  appmanager.h  main.cpp  main.qml
examples/app_manager-obfuscated/: appmanager.cpp  appmanager.h  main.cpp  main.qml
examples/container/: container.cpp  container.h  factory.cpp  factory.h  main.cpp  main.qml
examples/container-obfuscated/: container.cpp  container.h  container.pro  factory.cpp  factory.h  main.cpp  results.yaml
examples/sshkeygen/: KeyGenerator.cpp  KeyGenerator.h  main.cpp  main.qml  sshkeygen.pro
examples/sshkeygen-obfuscated/: KeyGenerator.cpp  KeyGenerator.h
examples/texteditor-obfuscated/: documenthandler.cpp  documenthandler.h  texteditor.cpp
examples/texteditor-obfuscated/qml/: texteditor.qml
qt-obfuscator/: CMakeLists.txt  command_line_parser.cpp  command_line_parser.h  constants.h  general_ast_actions.cpp  general_ast_actions.h  pr_generator.cpp  pr_generator.h  qml_refactor.cpp  qml_refactor.h  qt_obfuscator.cpp
qt5/QtCore/: qconfig.h
src/: constants.h  general_ast_actions.cpp  general_ast_actions.h  qt_obfuscator.cpp
